--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-
+   
 </head>
 <body>
-    <h1>vai ser uma imagem aqui</h1>
-    <ul> 
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="./img/alurastart logo 1.png" alt="logo da alura start">  
+    <ul class="cabeçalho-lista-item">
         <li>Estudante</li>
          <li>Escola</li>
-    </ul>
+     </ul>
+    </header>
+    <section class="escola">
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <p class="escola-texto-um">A Colégio Estadual Prof Joana Torres Pereira-Ensino Médio está localizada
+            na Rua Félix Tadeu Meyer, 449 Castro - PR.</p>
+        <p class="escola-texto-dois">Somos uma empresa séria 
+           e confiável, que oferece produtos de qualidade
+            e excelente atendimento aos seus clientes. Venha conhecer a
+            Colégio Estadual Prof Joana Torres Pereira-Ensino Médio!</p>
+            <img  class="escola-imagem" {
+                width:25%;
+            }
+            src="./img/download.jpg" alt="Colégio Joana Torres Pereira">
+    </section>
 </body>
 </html>
