--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
      </ul>
     </header>
     <section class="escola">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <div class="escola-conteúdo">
+        <h2 class="escola-titulo">Sobre a Escola</h2> 
         <p class="escola-texto-um">A Colégio Estadual Prof Joana Torres Pereira-Ensino Médio está localizada
             na Rua Félix Tadeu Meyer, 449 Castro - PR.</p>
         <p class="escola-texto-dois">Somos uma empresa séria 
            e confiável, que oferece produtos de qualidade
             e excelente atendimento aos seus clientes. Venha conhecer a
             Colégio Estadual Prof Joana Torres Pereira-Ensino Médio!</p>
-            <img  class="escola-imagem" {
-                width:25%;
-            }
-            src="./img/download.jpg" alt="Colégio Joana Torres Pereira">
-    </section>
+            </div>
+          <img class="escola-imagem" src="./img/download.jpg" alt="Colégio Joana Torres Pereira">
+           </section>
 </body>
 </html>
