--- a/index.html
+++ b/index.html
@@ -6,27 +6,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabeçalho">
         <img class="cabeçalho-imagem" src="./img/alurastart logo 1.png" alt="logo da alura start">  
     <ul class="cabeçalho-lista-item">
-        <li>Estudante</li>
-         <li>Escola</li>
-     </ul>
+        <li class="cabeçalho-lista-item">Estudante</li>
+        <li class="cabeçalho-lista-item">Escola</li>
+    </ul>
     </header>
     <section class="escola">
         <div class="escola-conteúdo">
         <h2 class="escola-titulo">Sobre a Escola</h2> 
-        <p class="escola-texto-um">A Colégio Estadual Prof Joana Torres Pereira-Ensino Médio está localizada
-            na Rua Félix Tadeu Meyer, 449 Castro - PR.</p>
-        <p class="escola-texto-dois">Somos uma empresa séria 
-           e confiável, que oferece produtos de qualidade
-            e excelente atendimento aos seus clientes. Venha conhecer a
-            Colégio Estadual Prof Joana Torres Pereira-Ensino Médio!</p>
+        <p class="escola-texto-um">O Colégio Estadual Prof Joana Torres Pereira está localizado
+            na Rua Félix Tadeu Meyer, 449 Castro - PR, somos uma escola confiável, que oferece uma educação 
+            de qualidade para os nossos alunos, venha conhecer a
+            Colégio Estadual Prof Joana Torres Pereira com Ensino Fundamental e Ensino Médio!</p>
             </div>
           <img class="escola-imagem" src="./img/download.jpg" alt="Colégio Joana Torres Pereira">
            </section>
+           <section class="estudantes">
+             <h2 class="estudante-título">Quem são nossos estudantes?</h2>
+     <div class="estudante-todos">
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/Screenshot_20230423-140605~2.png" alt="foto da estudante meliza">
+            <h3 class="estudante-nome">Meliza</h3>
+       </div>
+       <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/IMG-20230301-WA0005.jpg" alt="foto da estudante kimberly">
+            <h3 class="estudante-nome">Kimberli</h3>   
+       </div> 
+       <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/IMG-20230301-WA0010.jpg" alt="foto da estudante kimberly">
+            <h3 class="estudante-nome">Gabriele</h3> 
+       </div>
+       <div class="estudante-div">
+            <img class="estudante-imagem" src="./img/Snapchat-1296854724.jpg" alt="foto da estudante kimberly">
+            <h3 class="estudante-nome">Hágatha</h3> 
+       </div>
+     </div>
+
+            </section>
+        <footer>
+         <img src="./img/alurastart logo 1.png" alt="logo da alura start">
+        </footer>
 </body>
 </html>
